force-app/main/default/objects/SOW_Line_Item__c/fields/Line_Item_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Amount__c</fullName>
    <description>This field denotes the Line Item Amount.</description>
    <label>Line Item Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>