force-app/main/default/objects/SOW_Line_Item__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>This field denotes the Notes field.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>