force-app/main/default/objects/SOW_Line_Item__c/fields/Revenue_Contract_Statement_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Contract_Statement_of_Work__c</fullName>
    <description>This field denotes the parent Statement of Work</description>
    <label>Statement of Work</label>
    <referenceTo>Revenue_Contract__c</referenceTo>
    <relationshipLabel>SOW Line Items</relationshipLabel>
    <relationshipName>SOW_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>