force-app/main/default/objects/SOW_Line_Item__c/validationRules/Validate_Total_SOW_Line_Item_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Total_SOW_Line_Item_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>(Revenue_Contract_Statement_of_Work__r.Total_SOW_Line_Item_Amount__c +Line_Item_Amount__c) &gt; Revenue_Contract_Statement_of_Work__r.Total_Amount__c</errorConditionFormula>
    <errorMessage>Sum of SOW line Item amount should not exceed SOW Total Amount.</errorMessage>
</ValidationRule>